@@ -12,6 +12,7 @@ tlst-expand-tooltip=Toggle details\nShift: Move up\nControl: Move down
 tlst-force=Force [img=info]
 tlst-force-switch-description=Tasks shared among all in your same force
 tlst-new-task=New task
+tlst-new-task-instruction=New task (__CONTROL__confirm-gui__)
 tlst-private-description=Private tasks are visible only to you
 tlst-private=Private [img=info]
 tlst-private-switch-description=Tasks visible only to you
